Fixes menu + notificaiton overlap with footer

--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -4,6 +4,7 @@ header {
     bottom: 2rem;
     left: 1rem;
     height: fit-content;
+    z-index: 100;
 
     nav {
         ul {
