--- a/src/scss/components/_notifications.scss
+++ b/src/scss/components/_notifications.scss
@@ -12,6 +12,8 @@
     border-bottom-left-radius: 10px;
     color: $text-dark;
     font-weight: 500;
+    z-index: 100;
+    box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.4);
 
     &.clipboard {
         gap: 0.5rem;
